# sandbox-rust

./: .gitignore
ferris_watch/: Cargo.toml
ferris_watch/src/: main.rs
myrustly/: Cargo.toml
myrustly-lib/: Cargo.toml
myrustly-lib/src/: client.rs
myrustly/src/: main.rs  tmp_.rs  tmp__.rs
pomo_cli/: Cargo.toml  README.md
pomo_cli/.devcontainer/: devcontainer.json
pomo_cli/src/: lib.rs  main.rs
rust-cli-play/: Cargo.toml
rust-cli-play/.devcontainer/: Dockerfile  devcontainer.json
rust-cli-play/src/: main.rs  opts.rs
