[package]
name = "myrustly"
version = "0.0.1"
authors = ["tkhm <no-reply@mail.tkhm.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.6"
env_logger = "0.6.0"
failure = "0.1.3"
signal-hook = "0.1.6"
clap = "2.32.0"
pancurses = "0.16.0"
