[package]
name = "myrustly"
version = "0.0.1"
authors = ["tkhm <no-reply@mail.tkhm.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.8.3"
failure = "0.1.8"
signal-hook = "0.3.8"
clap = "2.33.3"
pancurses = "0.16.1"
