[package]
name = "rust-cli-play"
version = "0.1.0"
authors = ["tkhm <no-reply@mail.tkhm.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.22", features = ["rt-threaded", "macros"] }
derive_more = "0.99.9"
structopt = "0.3.17"
